--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 								</button>
 
 								<!--Nombre de la app-->
-								<a href="index.html" class="navbar-brand"
-									><img class="img-fluid" src="./img/Logo-Solo.png" alt="Logo" width="300rm"
-								/></a>
+								<a href="index.html" class="navbar-brand mr-0">
+									<img class="img-fluid" src="./img/Logo-Solo.png" alt="Logo" width="200rm" />
+								</a>
 
 								<!--Botones de las secciones-->
 								<div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
