--- a/signup.html
+++ b/signup.html
@@ -13,6 +13,87 @@
 	<body>
 		<!-- Comienza el nav -->
 
+		<div class="bg-light container-fluid px-4 px-xl-5">
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+						<header class="header">
+							<nav class="navbar navbar-expand-xl navbar-light form-control-static">
+								<!--Menu de hamburguesa-->
+								<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+									<span class="navbar-toggler-icon"></span>
+								</button>
+
+								<!--Nombre de la app-->
+								<a href="index.html" class="navbar-brand mr-0">
+									<img class="img-fluid" src="./img/Logo-Solo.png" alt="Logo" width="200rm" />
+								</a>
+
+								<!--Botones de las secciones-->
+								<div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+									<ul class="navbar-nav">
+										<li class="nav-item m-1 text-center">
+											<a href="index.html#section1" class="nav-link active">Inicio</a>
+										</li>
+										<!-- Dropdown 1 -->
+										<li class="nav-item m-1 dropdown">
+											<a
+												class="nav-link active dropdown-toggle text-center"
+												href="#"
+												id="navbarDropdown"
+												role="button"
+												data-toggle="dropdown"
+												aria-haspopup="true"
+												aria-expanded="false"
+											>
+												Acerca de
+											</a>
+											<div class="dropdown-menu text-center" aria-labelledby="navbarDropdown">
+												<a class="dropdown-item" href="index.html#section2">Misión y Visión</a>
+												<a class="dropdown-item" href="index.html#section3">Historia</a>
+												<a class="dropdown-item" href="index.html#section4">Testimonios</a>
+											</div>
+										</li>
+										<li class="nav-item m-1 text-center">
+											<a href="index.html#section5" class="nav-link active">Ubicación</a>
+										</li>
+										<li class="nav-item m-1 text-center">
+											<a href="index.html#section6" class="nav-link active">Contacto</a>
+										</li>
+										<li class="nav-item my-1 mx-2 text-center">
+											<a href="signup.html" class="btn btn-outline-primary shadow-sm">Registrate</a>
+										</li>
+										<li class="nav-item my-1 mx-2 text-center">
+											<a href="login.html" class="btn btn-primary shadow-sm">Ingresar</a>
+										</li>
+									</ul>
+								</div>
+							</nav>
+						</header>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Termina el nav -->
+
+		<span class="screenUp" id="screenUp"><i class="fas fa-chevron-up"></i></span>
+
+		<!-- Comienza onda -->
+
+		<div style="height: 150px; overflow: hidden">
+			<svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%">
+				<path
+					d="M0.00,49.98 C149.99,150.00 271.49,-49.98 500.00,49.98 L500.00,0.00 L0.00,0.00 Z"
+					style="stroke: none; fill: #f8f9fa"
+				></path>
+			</svg>
+		</div>
+
+		<!-- Termina onda -->
+
+		<!-- Comienza body -->
+
 		<div class="container-fluid px-4 px-xl-5 mb-5">
 			<div class="row">
 				<div class="col-12">
@@ -172,6 +253,8 @@
 			</svg>
 		</div>
 
+		<!-- Termina onda -->
+		
 		<!-- Comienza footer -->
 
 		<footer class="bg-light">
