--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 							</div>
 
 							<!-- Card 2 -->
-							<div class="col-xl-4">
+							<div class="col-xl-4 pt-4 pt-xl-0">
 								<div class="card shadow">
 									<div class="card-body">
 										<h4 class="card-title">Stephanny Cubillos</h4>
